<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Traffic Management System</string>
    <string name="BLANK"></string>
    <string name="STrain">Train</string>
    <string name="SViewAll">View all faces</string>

    <string name="hint_dob">Enter Age</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_gender">I am</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="btn_sign_up">Register !!</string>
    <string name="btn_link_login">Already have an account Login !!</string>
    <string name="SSearch">Search</string>
    <string name="SDelete">Delete</string>
    <string name="SEnter">Enter face name, then pres Rec</string>
    <string name="SStopTrain">Stop Training</string>
    <string name="SStopSearch">Stop Search</string>
    <string name="Straininig">Training...</string>
    <string name="SCanntoPredic">More than one face is needed to predict</string>
    <string name="SIdle">Idle</string>
    <string name="SFaceName">Face name:</string>
    <string name="SSearching">Searching</string>
    <string name="SFrontCamera">Front Camera</string>
    <string name="SBackCamera">Back Camera</string>
    <string name="training">Training</string>
    <string name="recognize">Recognize</string>
    <string name="capture">Capture</string>
    <string name="image_preview">image preview</string>
    <string name="capturing">Capturing</string>
    <string name="results">Recognized Faces</string>
    <string name="scan">Scan</string>
    <string name="scanning">Scanning</string>
    <string name="next">Next</string>
    <string name="please_enter_the_same_name_for_the_same_person_everytime_you_train_that_person">Please enter the same name for the same person everytime you train that person</string>
    <string name="who_are_you_going_to_train">Who are you going to train?</string>
    <string name="commit_attendance">Commit Attendance</string>
    <string name="give_attendance">Give Attendance</string>
    <string name="mark_attendance">Mark Attendance</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

</resources>
